--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,14 @@ name: Build debian
 on:
   repository_dispatch:
   workflow_dispatch:
+    inputs:
+      arch:
+        description: "Target architecture"
+        required: true
+        default: 'armv7'
+        type: choice
+        options:
+          - armv7
   
 jobs:
   build:
@@ -36,9 +44,14 @@ jobs:
 
       - name: Generate release tag
         id: version
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           NAME=$(echo "Debian $(cat rootfs/debian_version)")
-          TAG_NAME=$(cat rootfs/debian_version)-${{ github.run_number }}
+          TAG_NAME="$(cat rootfs/debian_version)-${{ github.run_number }}-${{ inputs.arch }}"
+          gh release delete "$TAG_NAME" --yes || true
+          git tag -d "$TAG_NAME" 2>/dev/null || true
+          git push --delete origin "$TAG_NAME" 2>/dev/null || true
           git tag $TAG_NAME
           git push origin $TAG_NAME
           echo -e "- Bootloader: $(cat aboot/ver.txt)\n$(cat rootfs/info.md)\n\n$(git log -1 --format=%B)" > release_notes.md
