--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Prepare
         run: |
           sudo apt-get -y update
-          sudo apt-get -y install debootstrap binfmt-support qemu-user-static android-sdk-libsparse-utils
+          sudo apt-get -y install binfmt-support qemu-user-static android-sdk-libsparse-utils
 
       - name: Checkout
         uses: actions/checkout@v4
