--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     name: Build debian
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Prepare
         run: |
