--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          NAME=$(echo "Debian $(cat rootfs/debian_version)")
+          NAME=$(echo "Debian $(cat rootfs/debian_version)-${{ github.run_number }}-${{ inputs.arch }}")
           TAG_NAME="$(cat rootfs/debian_version)-${{ github.run_number }}-${{ inputs.arch }}"
           gh release delete "$TAG_NAME" --yes || true
           git tag -d "$TAG_NAME" 2>/dev/null || true
