--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -49,7 +49,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           NAME=$(echo "Debian $(cat rootfs/debian_version)")
-          TAG_NAME="$(cat rootfs/debian_version)-${{ github.run_number }}-${{ inputs.arch }}"
+          TAG_NAME="$(cat rootfs/debian_version)-${{ inputs.arch }}_${{ github.run_number }}"
           gh release delete "$TAG_NAME" --yes || true
           git tag -d "$TAG_NAME" 2>/dev/null || true
           git push --delete origin "$TAG_NAME" 2>/dev/null || true
